--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -1,67 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:scrollbarAlwaysDrawVerticalTrack="true"
+    android:orientation="vertical"
     android:scrollbars="vertical">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="wrap_content"
+        android:background="#444444"
+        android:orientation="horizontal">
 
-        <LinearLayout
+        <Button
+            android:id="@+id/sendBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:minWidth="80dp"
+            android:minHeight="48dp"
+            android:text="Send" />
+
+        <Button
+            android:id="@+id/saveBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:minWidth="80dp"
+            android:minHeight="48dp"
+            android:text="Save" />
+
+        <Button
+            android:id="@+id/pauseBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:minWidth="80dp"
+            android:minHeight="48dp"
+            android:text="Pause" />
+
+        <Button
+            android:id="@+id/clearBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:minWidth="80dp"
+            android:minHeight="48dp"
+            android:text="Clear" />
+
+        <Button
+            android:id="@+id/inspectBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:minWidth="80dp"
+            android:minHeight="48dp"
+            android:text="Inspect" />
+
+        <!-- Spacer View -->
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <ImageButton
+            android:id="@+id/filterBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:layout_margin="2dp"
+            android:layout_weight=".5"
+            android:adjustViewBounds="true"
+            android:background="@android:color/transparent"
+            android:contentDescription="Filter"
+            android:minWidth="48dp"
+            android:minHeight="48dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_filter" />
+
+    </LinearLayout>
+    <ScrollView
+        android:background="@color/black"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:scrollbarAlwaysDrawVerticalTrack="true"
+        android:orientation="vertical"
+        android:scrollbars="vertical">
+        <TextView
+            android:id="@+id/cotexplorerlog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#444444"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/sendBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="   Send   " />
-            <Button
-                android:id="@+id/saveBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="   Save   " />
-            <Button
-                android:id="@+id/filterBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="   Filter   " />
-            <Button
-                android:id="@+id/pauseBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="   Pause   " />
-            <Button
-                android:id="@+id/clearBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="   Clear   " />
-        </LinearLayout>
-
-        <LinearLayout
-            android:background="@color/white"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/cotexplorerlog"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#000000"
-                android:paddingStart="10dp"
-                android:paddingTop="10dp"
-                android:paddingEnd="0dp"
-                android:paddingBottom="10dp"
-                android:clickable="true"
-                android:textIsSelectable="true"
-                android:textColor="@color/white" />
-        </LinearLayout>
-    </LinearLayout>
-</ScrollView>
+            android:background="#000000"
+            android:paddingStart="10dp"
+            android:paddingTop="10dp"
+            android:paddingEnd="0dp"
+            android:paddingBottom="10dp"
+            android:clickable="true"
+            android:textIsSelectable="true"
+            android:textColor="@color/white" />
+    </ScrollView>
+</LinearLayout>
