--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -2,101 +2,89 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:scrollbarAlwaysDrawVerticalTrack="true"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:scrollbars="vertical">
+
+    <!-- HorizontalScrollView for the top button bar -->
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#444444"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
         <Button
             android:id="@+id/sendBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_margin="2dp"
-            android:minWidth="80dp"
-            android:minHeight="48dp"
             android:text="Send" />
 
         <Button
             android:id="@+id/saveBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_margin="2dp"
-            android:minWidth="80dp"
-            android:minHeight="48dp"
             android:text="Save" />
 
         <Button
             android:id="@+id/pauseBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_margin="2dp"
-            android:minWidth="80dp"
-            android:minHeight="48dp"
             android:text="Pause" />
 
         <Button
             android:id="@+id/clearBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_margin="2dp"
-            android:minWidth="80dp"
-            android:minHeight="48dp"
             android:text="Clear" />
 
         <Button
             android:id="@+id/inspectBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
             android:layout_margin="2dp"
-            android:minWidth="80dp"
-            android:minHeight="48dp"
             android:text="Inspect" />
 
-        <!-- Spacer View -->
         <View
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1" />
 
         <ImageButton
             android:id="@+id/filterBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="end"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_margin="2dp"
-            android:layout_weight=".5"
-            android:adjustViewBounds="true"
             android:background="@android:color/transparent"
-            android:contentDescription="Filter"
-            android:minWidth="48dp"
-            android:minHeight="48dp"
             android:scaleType="centerInside"
+            android:contentDescription="Filter"
             android:src="@drawable/ic_filter" />
-
     </LinearLayout>
+    </HorizontalScrollView>
+
+    <!-- ScrollView for logs -->
     <ScrollView
         android:background="@color/black"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:scrollbarAlwaysDrawVerticalTrack="true"
-        android:orientation="vertical"
         android:scrollbars="vertical">
+
         <TextView
             android:id="@+id/cotexplorerlog"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#000000"
-            android:paddingStart="10dp"
-            android:paddingTop="10dp"
-            android:paddingEnd="0dp"
-            android:paddingBottom="10dp"
+            android:padding="10dp"
             android:clickable="true"
             android:textIsSelectable="true"
             android:textColor="@color/white" />
