--- a/app/src/main/res/layout/main_layout.xml
+++ b/app/src/main/res/layout/main_layout.xml
@@ -80,6 +80,6 @@
         android:id="@+id/cotexplorerlog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="true"
+        android:layout_weight="1"
         android:padding="10dp" />
 </LinearLayout>
